compiler/testData/diagnostics/tests/inference/builderInference/kt47986_3.diag.txt
/kt47986_3.kt:10:13: error: not enough information to infer type variable K
    val x = buildFoo {
            ^

